# empora-code-sample

./: .env.example  README.md  decisions.md  pyproject.toml
sample/: __main__.py  sample.py
sample/actions/: parse_addresses_csv.py  verify_addresses.py
sample/commands/: verify_addresses.py
sample/models/: address.py  settings.py
sample/models/smarty/: us_street_address.py  us_street_address_input.py  us_street_address_output.py
tests/: tests.py
tests/actions/: test_parse_addresses_csv.py  test_verify_addresses.py
tests/commands/: test_verify_addresses.py
tests/data/: addresses.csv  addresses.py
tests/data/smarty_address_verification/: __init__.py  successful_response.json  successful_response_1.json
tests/models/: test_address.py
tests/models/smarty/: test_us_street_address.py  test_us_street_address_input.py  test_us_street_address_output.py
