[tool.poetry]
name = "empora-code-sample"
version = "0.1.0"
description = "A code sample for Empora."
authors = ["Anon Y Mouse <anon@example.com>"]
readme = "README.md"
packages = [{include = "empora_code_sample"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
click = "^8.1.3"
requests = "^2.30.0"
toolz = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
poetry = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist"]
max-complexity = 10
count=true
